cabal-version:      2.4
name:               mmzk-typeid
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mmzk1526
maintainer:         yc4120@ic.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    test/invalid.json


test-suite test
    ghc-options:
        -O0
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0
    other-modules:
        Data.KindID,
        Data.TypeID,
        Data.TypeID.Internal,
        Data.UUID.V7
    default-extensions:
        BlockArguments
        DataKinds
        KindSignatures
        InstanceSigs
        MultiWayIf
        OverloadedStrings
        TypeApplications
    build-depends:
        base ^>=4.16.4.0,
        aeson ^>=2.1,
        array ^>=0.5,
        binary ^>=0.8.9,
        bytestring ^>= 0.11,
        entropy ^>=0.4,
        hspec ^>=2.11,
        text ^>=2.0,
        transformers ^>=0.6,
        time ^>=1.11,
    hs-source-dirs:
        src
        test
    default-language: Haskell2010


executable playground
    main-is:          Main.hs
    other-modules:
        Data.KindID,
        Data.TypeID,
        Data.TypeID.Internal,
        Data.UUID.V7
    default-extensions:
        BlockArguments
        DataKinds
        KindSignatures
        InstanceSigs
        MultiWayIf
        OverloadedStrings
        TypeApplications
    build-depends:
        base ^>=4.16.4.0,
        aeson ^>=2.1,
        array ^>=0.5,
        binary ^>=0.8.9,
        bytestring ^>= 0.11,
        entropy ^>=0.4,
        text ^>=2.0,
        transformers ^>=0.6,
        time ^>=1.11,
    hs-source-dirs:   src
    default-language: Haskell2010


library
    exposed-modules:
        Data.KindID,
        Data.TypeID,
        Data.UUID.V7
    other-modules:
        Data.TypeID.Internal
    default-extensions:
        BlockArguments
        DataKinds
        KindSignatures
        InstanceSigs
        MultiWayIf
        OverloadedStrings
        TypeApplications
    build-depends:
        base ^>=4.16.4.0,
        aeson ^>=2.1,
        array ^>=0.5,
        binary ^>=0.8.9,
        bytestring ^>= 0.11,
        entropy ^>=0.4,
        text ^>=2.0,
        transformers ^>=0.6,
        time ^>=1.11,
    hs-source-dirs:   src
    default-language: Haskell2010
