cabal-version:      3.6
name:               mmzk-typeid
version:            0.1.0.0

synopsis:           A typeid implementation for Haskell
description:
  typeid is a type-safe, K-sortable, globally unique identifier inspired by Stripe IDs.
  The specification is available at https://github.com/jetpack-io/typeid.
  This library supports generating and parsing speç-conforming typeids, with the following additional features:
    - Batch generating typeids with the same 'UUID'v7 timestamp
    - Encode prefixes at type-level for better type-safety
bug-reports:        https://github.com/MMZK1526/mmzk-typeid/issues
license:            MIT
author:             MMZK1526
maintainer:         mmzk1526@ic.ac.uk
extra-source-files:
    CHANGELOG.md
    LICENSE
    test/invalid.json
    test/valid.json


test-suite test
    ghc-options:
        -O0
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0
    other-modules:
        Data.KindID,
        Data.TypeID,
        Data.TypeID.Internal,
        Data.UUID.V7
    default-extensions:
        BlockArguments
        DataKinds
        KindSignatures
        InstanceSigs
        MultiWayIf
        OverloadedStrings
        TypeApplications
    build-depends:
        base ^>=4.16.4.0,
        aeson ^>=2.1,
        array ^>=0.5,
        binary ^>=0.8.9,
        bytestring ^>= 0.11,
        entropy ^>=0.4,
        hspec ^>=2.11,
        text ^>=2.0,
        transformers ^>=0.6,
        time ^>=1.11,
    hs-source-dirs:
        src
        test
    default-language: Haskell2010


executable playground
    main-is:          Main.hs
    other-modules:
        Data.KindID,
        Data.TypeID,
        Data.TypeID.Internal,
        Data.UUID.V7
    default-extensions:
        BlockArguments
        DataKinds
        KindSignatures
        InstanceSigs
        MultiWayIf
        OverloadedStrings
        TypeApplications
    build-depends:
        base ^>=4.16.4.0,
        aeson ^>=2.1,
        array ^>=0.5,
        binary ^>=0.8.9,
        bytestring ^>= 0.11,
        entropy ^>=0.4,
        text ^>=2.0,
        transformers ^>=0.6,
        time ^>=1.11,
    hs-source-dirs:   src
    default-language: Haskell2010


library
    exposed-modules:
        Data.KindID,
        Data.TypeID,
        Data.UUID.V7
    other-modules:
        Data.TypeID.Internal
    default-extensions:
        BlockArguments
        DataKinds
        KindSignatures
        InstanceSigs
        MultiWayIf
        OverloadedStrings
        TypeApplications
    build-depends:
        base ^>=4.16.4.0,
        aeson ^>=2.1,
        array ^>=0.5,
        binary ^>=0.8.9,
        bytestring ^>= 0.11,
        entropy ^>=0.4,
        text ^>=2.0,
        transformers ^>=0.6,
        time ^>=1.11,
    hs-source-dirs:   src
    default-language: Haskell2010
